balance columns, alphabetic order <tea#37365>

--- a/wiki/tea.wikitext
+++ b/wiki/tea.wikitext
@@ -1,11 +1,12 @@
+{{Wikipedia}}
 ==English==
 ===Etymology===
 From Dutch '''[[thee#Dutch|thee]]''' (through the [[Dutch East India Company]]) < Chinese [[Min Nan]] dialect [[茶]] [[Image:Tea.bmp]], which is pronounced TE /te/ in [[Min Nan]]. Many Western languages have this pronunciation at the root of their words for tea. This same character is pronounced "cha" in [[Mandarin]] and other dialects, giving rise to words for tea in many Eastern languages, hence "[[chai]]" in [[Indo-Iranian]] languages, Russian and Arabic.
 
 ===Pronunciation===
-*[[w:AHD|AHD]]: tē
-*[[w:IPA|IPA]]: /tiː/
-*[[w:SAMPA|SAMPA]]: /ti:/
+*{{AHD|tē}}
+*{{IPA|/tiː/}}
+*{{SAMPA|/ti:/}}
 
 ===Homophones===
 *[[T]], [[te]], [[tee]], [[ti]]
@@ -18,12 +19,12 @@ From Dutch '''[[thee#Dutch|thee]]''' (through the [[Dutch East India Company]]) 
 #(''[[uncountable]]'') The drink made by [[infuse|infusing]] these dried leaves or buds in hot water, often served with milk or cream and sugar added.
 #:''Would you like some tea?''
 #(''[[countable]]'') A cup of this drink.
-#:''I'd like two teas, please.''
+#:''I’d like two teas, please.''
 #(''[[uncountable]]'') By extension, any drink made by infusing parts of various other plants.
 #:''camomile tea''
 #(''[[countable]]'') A cup of any one of these drinks.
 #(''especially in Britain''; ''[[uncountable]]'') A light meal eaten mid-afternoon, typically with tea.
-#:''Kids, your tea's on the table!''
+#:''Kids, your tea’s on the table!''
 #(''British''; ''[[uncountable]]'') The main evening meal, irrespective of whether tea is drunk with it.
 #:''The family were sitting round the table, having their tea.''
 #{{Cricket}} The [[break]] in [[play]] between the [[second session|second]] and [[third session|third]] [[session]]s.
@@ -36,40 +37,30 @@ From Dutch '''[[thee#Dutch|thee]]''' (through the [[Dutch East India Company]]) 
 ====Translations====
 
 '''dried leaves of tea plant'''
-{| border=0  width=100%
-|-
-|bgcolor="#FFFFE0" valign=top width=48%|
-{|
-*Chinese: [[茶叶]] (cháyè, chaye, cha2ye4)
+{{top}}
+*Chinese: [[茶叶]] (cháyè)
 *Finnish: [[tee#Finnish|tee]]
-*{{fr}}: [[thé]] ''m''
+*French: [[thé]] ''m''
 *German: [[Teeblatt]] ''n'', [[Teeblätter]] ''pl''
-*{{it}}: [[tè]] ''m''
-|}
-| width=1% |
-|bgcolor="#FFFFE0" valign=top width=48%|
-{|
+*Hebrew: [[עלי תה]] (aléi té) ''m''
+*Italian: [[tè]] ''m''
 *Japanese: [[茶]] (ちゃ, cha)
 *Korean: [[차]] (cha)
 *Latvian: [[tēja]] ''f''
+{{mid}}
 *[[Ojibwe]]: [[aniibiish]], [[aniibiishan]] ''pl''
 *[[Persian]]: [[چاى]] (čāi)
+*Polish: [[herbata#Polish|herbata]] ''f''
 *Portuguese: [[folha de chá]] ''f''
-*{{pl}}: [[herbata#Polish|herbata]] ''f''
 *Russian: [[чай]] (čaj) ''m'', [[чай|чаи]] (čaí) ''pl''
 *{{sk}}: [[čaj#Slovak|čaj]] ''m''
 *Spanish: [[hoja de té]] ''f''
-*Thai: [[ชา]] (chaa), [[ใบชา]] (bai chaa)
-*Hebrew: [[עלי תה]] (aléi té) ''m''
-|}
-|}
+*Thai: {{THchar|[[ชา]]}} (chaa), {{THchar|[[ใบชา]]}} (bai chaa)
+{{bottom}}
 
 '''drink made from leaves of tea plant'''
-{| border=0  width=100%
-|-
-|bgcolor="#FFFFE0" valign=top width=48%|
-{|
-*Arabic: [[شاي|شَاي]] (šæːy) ''m''
+{{top}}
+*Arabic: {{ARchar|[[شاي|شَاي]]}} {{IPAchar|(šæːy)}} ''m''
 *Basque: [[te#Basque|te]]
 *Bulgarian: [[чай#Bulgarian|чай]] (čaj) ''m''
 *Chinese: [[茶]] (chá, cha, cha2)
@@ -80,121 +71,89 @@ From Dutch '''[[thee#Dutch|thee]]''' (through the [[Dutch East India Company]]) 
 *[[Esperanto]]: [[teo#Esperanto|teo]]
 *Estonian: [[tee#Estonian|tee]]
 *Finnish: [[tee#Finnish|tee]]
-*{{fr}}: [[thé]] ''m''
+*French: [[thé]] ''m''
 *German: [[Tee#German|Tee]] ''m'', [[Tee#German|Tees]] ''pl''
 *Greek: [[τσάι|τσάϊ]] (čáï) ''n''
 *Hebrew: [[תה]] (té) ''m''
 *Hungarian: [[tea#Hungarian|tea]]
-*{{it}}: [[tè]] ''m''
-|}
-| width=1% |
-|bgcolor="#FFFFE0" valign=top width=48%|
-{|
+*Italian: [[tè]] ''m''
 *Japanese: [[お茶]] ([[おちゃ]], o-chá)
 *Korean: [[차]] (cha)
 *Latvian: [[tēja]] ''f''
+{{mid}}
 *Norwegian: [[te#Norwegian|te]] ''c''
 *[[Ojibwe]]: [[aniibiishaaboo]]
 *[[Persian]]: [[چاى]] (čāy)
-*{{pl}}: [[herbata#Polish|herbata]] ''f''
+*Polish: [[herbata#Polish|herbata]] ''f''
 *Portuguese: [[chá]] ''m''
 *Romanian: [[ceai]] ''m''
 *Russian: [[чай]] (čaj) ''m'', [[чай|чаи]] (čaí) ''pl''
 *Serbian: [[чај]] (čaj) ''m''
 *[[Sinhala]]: [[තේ]] (tee), [[තෝ]] (too)
-*{{sk}}: [[čaj#Slovak|čaj]] ''m''
+*Slovak: [[čaj#Slovak|čaj]] ''m''
 *Slovene: [[čaj#Slovene|čaj]] ''m''
 *Spanish: [[té]] ''m''
 *Swahili: [[chai#Swahili|chai]] ''(noun 9)''
 *Swedish: [[te#Swedish|te]] ''n''
-*Thai: [[ชา]] (chaa)
-*{{bo}}: [[ཇ་]] (za)
+*Thai: {{THchar|[[ชา]]}} (chaa)
+*[[Tibetan]]: [[ཇ་]] (za)
 *Turkish: [[çay]]
 *Ukrainian: [[чай]] (čaj) ''m''
-|}
-|}
+{{bottom}}
 
 '''cup of this drink'''
-{| border=0  width=100%
-|-
-|bgcolor="#FFFFE0" valign=top width=48%|
-{|
-*Arabic: [[فنجان شاي|فِنْجَان شَاي]] (findžáːn šæːy) ''m'', [[فناجين شاي|فَنَاجِينُ شَاي]] (fanadžíːnu šæːy) ''pl''
+{{top}}
+*Arabic: {{ARchar|[[فنجان شاي|فِنْجَان شَاي]]}} {{IPAchar|(findžáːn šæːy)}} ''m'', {{ARchar|[[فناجين شاي|فَنَاجِينُ شَاي]]}} {{IPAchar|(fanadžíːnu šæːy)}} ''pl''
 *Bulgarian: [[чаша]] [[чай#Bulgarian|чай]] (čáša čaj) ''f''
 *Finnish: [[tee#Finnish|tee]], [[kuppi]] [[tee#Finnish|teetä]]
 *French: [[tasse#French|tasse]] de [[thé]] ''f''
 *German: [[Tasse#German|Tasse]] [[Tee#German|Tee]] ''f''
 *Hebrew: [[ספל תה]] (séfel té) ''m''
 *Hungarian: [[csésze]] [[tea#Hungarian|tea]]
-|}
-| width=1% |
-|bgcolor="#FFFFE0" valign=top width=48%|
-{|
 *Japanese: [[お茶]][[一杯]] ([[おちゃ]][[いっぱい]], o-cha íppai)
 *Latvian: [[tēja]] ''f''
-*{{pl}}: [[szklanka#Polish|szklanka]] [[herbata#Polish|herbaty]] ''f''
+*Polish: [[szklanka#Polish|szklanka]] [[herbata#Polish|herbaty]] ''f''
+{{mid}}
 *Portuguese: [[xícara]] de [[chá]] ''f''
 *Romanian: [[ceaşcă]] de [[ceai]] ''f''
 *Russian: [[чашка]] [[чай|чая]] (čáška čája) ''f'', [[чашка]] [[чай|чаю]] (čáška čáju) ''f''
-*{{sk}}: [[čaj#Slovak|čaj]] ''m''
+*Slovak: [[čaj#Slovak|čaj]] ''m''
 *Spanish: [[taza]] de [[té]] ''f''
-*Thai: [[ชาถ้วยหนึ่ง]] (chaa thuày nèùng), [[ชาหนึ่งถ้วย]] (chaa nèùng thuày)
+*Thai: {{THchar|[[ชาถ้วยหนึ่ง]]}} (chaa thuày nèùng), {{THchar|[[ชาหนึ่งถ้วย]]}} (chaa nèùng thuày)
 *Turkish: [[bardak]] [[çay]]
 *Ukrainian: [[чашка#Ukrainian|чашка]] [[чай#Ukrainian|чаю]] (čáška čáju) ''f''
-|}
-|}
+{{bottom}}
 
 '''drink made from other plants'''
-{| border=0  width=100%
-|-
-|bgcolor="#FFFFE0" valign=top width=48%|
-{|
+{{top}}
 *Finnish: [[tee#Finnish|tee]], [[haude#Finnish|haude]]
 *French: [[tisane]] ''f''
-*{{pl}}: [[herbata#Polish|herbata]] ''f''
-|}
-| width=1% |
-|bgcolor="#FFFFE0" valign=top width=48%|
-{|
+*Hebrew: [[תה צמחים]] (té tsmahim) ''m''
+{{mid}}
 *Italian: [[tisana]] ''f''
 *Latvian: [[tēja]] ''f''
-*{{sk}}: [[čaj#Slovak|čaj]] ''m''
-*Hebrew: [[תה צמחים]] (té tsmahim) ''m''
-|}
-|}
+*Polish: [[herbata#Polish|herbata]] ''f''
+*Slovak: [[čaj#Slovak|čaj]] ''m''
+{{bottom}}
 
 '''cup of drink made from other plants'''
-{| border=0  width=100%
-|-
-|bgcolor="#FFFFE0" valign=top width=48%|
-{|
-*Latvian: [[tēja]] ''f''
-*{{pl}}: [[herbata#Polish|herbata]] ''f''
-|}
-| width=1% |
-|bgcolor="#FFFFE0" valign=top width=48%|
-{|
-*{{sk}}: [[čaj#Slovak|čaj]] ''m''
+{{top}}
 *Hebrew: [[ספל תה צמחים]] (séfel té tsmahim) ''m''
-|}
-|}
+*Latvian: [[tēja]] ''f''
+{{mid}}
+*Polish: [[herbata#Polish|herbata]] ''f''
+*Slovak: [[čaj#Slovak|čaj]] ''m''
+{{bottom}}
 
 '''light afternoon meal'''
-{| border=0  width=100%
-|-
-|bgcolor="#FFFFE0" valign=top width=48%|
-{|
+{{top}}
 *Finnish: [[välipala]], [[kahvi#Finnish|kahvit]] ''pl''
 *French: [[goûter]] ''m''
 *Latvian: [[tēja]] ''f''
-|}
-| width=1% |
-|bgcolor="#FFFFE0" valign=top width=48%|
-{|
+{{mid}}
 *Polish: [[podwieczorek#Polish|podwieczorek]] ''m''
 *Slovak: [[olovrant#Slovak|olovrant]] ''m''
-|}
-|}
+{{bottom}}
 
 '''dinner'''
 ''See [[dinner]]''
@@ -224,7 +183,7 @@ The translations below need to be checked by native speakers and inserted into t
 *[[teacake]]
 *[[tea cosy]]
 *[[teacup]]
-*[[tea leaf]]<!--Cockney rhyming slang for "thief"-->
+*''([[Cockney rhyming slang]])'' [[tea leaf]]<!--= "thief"-->
 *[[tea leaves]]
 *[[tea party]]
 *[[teapot]]
@@ -235,11 +194,8 @@ The translations below need to be checked by native speakers and inserted into t
 *[[tea tray]]
 *[[tea urn]]
 
-===See also===
-*[[w:Tea|Wikipedia article on tea]]
 
 ----
-
 ==Hungarian==
 ===Noun===
 '''tea''' {{IPA|/'tɛjɔ/}}
