--- a/wiki/tea.wikitext
+++ b/wiki/tea.wikitext
@@ -63,7 +63,7 @@ From Dutch '''[[thee#Dutch|thee]]''' (through the [[Dutch East India Company]]) 
 *Arabic: {{ARchar|[[شاي|شَاي]]}} {{IPAchar|(šæːy)}} ''m''
 *Basque: [[te#Basque|te]]
 *Bulgarian: [[чай#Bulgarian|чай]] (čaj) ''m''
-*Chinese: [[茶]] (chá, cha, cha2)
+*Chinese: [[茶]] (chá)
 *Croatian: [[čaj#Croatian|čaj]] ''m''
 *Czech: [[čaj#Czech|čaj]] ''m''
 *Danish: [[te#Danish|te]] ''c''
