--- a/wiki/red_herring.wikitext
+++ b/wiki/red_herring.wikitext
@@ -1,4 +1,5 @@
 ==English==
+{{wikipedia}}
 ===Etymology===
 It is thought to have originated from the use of [[smoked herring]] fish to [[distract]] dogs following a scent trail ([[w:1686|1686]]), a figurative sense is first attested [[w:1884|1884]].
 
