--- a/wiki/vainglory.wikitext
+++ b/wiki/vainglory.wikitext
@@ -3,3 +3,7 @@
 ===Noun===
 '''vainglory'''
 # Excessive [[vanity]].
+
+Vainglory is defined by Webster's 1913 Dictionary as excessive vanity excited by one's own performances; empty pride; undue elation of mind; vain show; boastfulness.
+
+Originally included in the 4th century Egyptian monk Evagrius Ponticus eight deadly "passions"; however, Thomas Aquinas in the 13th century enumerated only seven deadly sins, by merging pride with vainglory.
