--- a/wiki/%D0%91%D0%B0%D0%B3%D0%B4%D0%B0%D0%B4.wikitext
+++ b/wiki/%D0%91%D0%B0%D0%B3%D0%B4%D0%B0%D0%B4.wikitext
@@ -1,3 +1,36 @@
+==Russian==
+[[Category:Russian nouns]]
+===Noun===
+'''Багдад''' (Bagdád) ''m''
+
+#[[Baghdad]] (capital of [[Iraq]])
+
+===Declension===
+{| border="1" cellpadding="4" cellspacing="0"
+!
+! style="background-color: #EFEFFF" align="center"|[[singular]]
+|-
+! style="background-color: #FFFFE0" align="left"|[[nominative case|nominative]]
+| align="center"|{{RUchar|Багда́д}}
+|-
+! style="background-color: #FFFFE0" align="left"|[[genitive case|genitive]]
+| align="center"|{{RUchar|Багда́да}}
+|-
+! style="background-color: #FFFFE0" align="left"|[[dative case|dative]]
+| align="center"|{{RUchar|Багда́ду}}
+|-
+! style="background-color: #FFFFE0" align="left"|[[accusative case|accusative]]
+| align="center"|{{RUchar|Багда́д}}
+|-
+! style="background-color: #FFFFE0" align="left"|[[instrumental case|instrumental]]
+| align="center"|{{RUchar|Багда́дом}}
+|-
+! style="background-color: #FFFFE0" align="left"|[[prepositional case|prepositional]]
+| align="center"|{{RUchar|о Багда́де}}
+|}
+
+
+----
 ==Serbian==
 ===Proper noun===
 '''Багдад''' ''m s''
