--- a/wiki/%D0%97%D0%B0%D0%B3%D1%80%D0%B5%D0%B1.wikitext
+++ b/wiki/%D0%97%D0%B0%D0%B3%D1%80%D0%B5%D0%B1.wikitext
@@ -1,3 +1,36 @@
+==Russian==
+[[Category:Russian nouns]]
+===Noun===
+'''Загреб''' (Zágreb) ''m''
+
+#[[Zagreb]] (capital of [[Croatia]])
+
+===Declension===
+{| border="1" cellpadding="4" cellspacing="0"
+!
+! style="background-color: #EFEFFF" align="center"|[[singular]]
+|-
+! style="background-color: #FFFFE0" align="left"|[[nominative case|nominative]]
+| align="center"|{{RUchar|За́греб}}
+|-
+! style="background-color: #FFFFE0" align="left"|[[genitive case|genitive]]
+| align="center"|{{RUchar|За́греба}}
+|-
+! style="background-color: #FFFFE0" align="left"|[[dative case|dative]]
+| align="center"|{{RUchar|За́гребу}}
+|-
+! style="background-color: #FFFFE0" align="left"|[[accusative case|accusative]]
+| align="center"|{{RUchar|За́греб}}
+|-
+! style="background-color: #FFFFE0" align="left"|[[instrumental case|instrumental]]
+| align="center"|{{RUchar|За́гребом}}
+|-
+! style="background-color: #FFFFE0" align="left"|[[prepositional case|prepositional]]
+| align="center"|{{RUchar|о За́гребе}}
+|}
+
+
+----
 ==Serbian==
 ===Proper noun===
 '''Загреб''' ''m s''
