--- a/wiki/Cyrillic.wikitext
+++ b/wiki/Cyrillic.wikitext
@@ -1,6 +1,6 @@
 ==English==
 ===Etymology===
-Named for its supposed inventor, [[w:Saint Cyril|Saint Cyril]]
+Named for its supposed inventor, [[w:Saint Cyril|Saint Cyril]].
 
 ===Adjective===
 '''Cyrillic'''
@@ -13,12 +13,17 @@ Named for its supposed inventor, [[w:Saint Cyril|Saint Cyril]]
 # An alphabet used to write six natual Slavic languages ([[Belarusian]], [[Bulgarian]], [[Macedonian]], [[Russian]], [[Serbian]], and [[Ukrainian]]) and many other languages of the former Soviet Union, Asia and Eastern Europe.
 
 ====Translations====
-*Bulgarian: [[кирилица]] ''f''
+{{top}}
+*Bulgarian: [[кирилица]] (kirílitsa) ''f''
+*Greek: [[κυριλλιακόν]] (kyrilliakón) ''n''
+{{mid}}
 *Polish: [[cyrylica]] ''f''
-*Russian: [[Кириллица]] (Kirillitsa)
+*Russian: [[кириллица]] (kiríllitsa) ''f''
+*Spanish: [[cirílico]] ''m''
+{{bottom}}
 
 ===See also===
-*[[w:Cyrillic|Wikipedia article on Cyrillic]]
+*[[w:Cyrillic alphabet|Wikipedia article on Cyrillic]]
 
 [[Category:English eponyms]]
 [[pl:Cyrillic]]
