--- a/wiki/%D0%BA%D0%B8%D1%80%D0%B8%D0%BB%D0%B8%D1%86%D0%B0.wikitext
+++ b/wiki/%D0%BA%D0%B8%D1%80%D0%B8%D0%BB%D0%B8%D1%86%D0%B0.wikitext
@@ -1,5 +1,9 @@
 ==Bulgarian==
+[[Category:Bulgarian nouns]]
 ===Noun===
-'''кирилица''' ''f''
+'''кирилица''' (kirílitsa) ''f''
 
-# [[Cyrillic]]
+# [[Cyrillic]] [[alphabet]]
+
+===Translations===
+*Russian: [[кириллица]]
