--- a/wiki/%D0%BA%D0%B8%D1%80%D0%B8%D0%BB%D0%BB%D0%B8%D1%86%D0%B0.wikitext
+++ b/wiki/%D0%BA%D0%B8%D1%80%D0%B8%D0%BB%D0%BB%D0%B8%D1%86%D0%B0.wikitext
@@ -1,5 +1,33 @@
 ==Russian==
+[[Category:Russian nouns]]
 ===Noun===
-'''Кириллица''' (Kirillitsa)
+'''кириллица''' (kiríllitsa) ''f''
 
-# [[Cyrillic]]
+# [[Cyrillic]] [[alphabet]]
+
+===Declension===
+{| border="1" cellpadding="4" cellspacing="0"
+!
+! style="background-color: #EFEFFF" align="center"|[[singular]]
+|-
+! style="background-color: #FFFFE0" align="left"|[[nominative case|nominative]]
+| align="center"|{{RUchar|кири́ллица}}
+|-
+! style="background-color: #FFFFE0" align="left"|[[genitive case|genitive]]
+| align="center"|{{RUchar|кири́ллицы}}
+|-
+! style="background-color: #FFFFE0" align="left"|[[dative case|dative]]
+| align="center"|{{RUchar|кири́ллице}}
+|-
+! style="background-color: #FFFFE0" align="left"|[[accusative case|accusative]]
+| align="center"|{{RUchar|кири́ллицу}}
+|-
+! style="background-color: #FFFFE0" align="left"|[[instrumental case|instrumental]]
+| align="center"|{{RUchar|кири́ллицей, -ею}}
+|-
+! style="background-color: #FFFFE0" align="left"|[[prepositional case|prepositional]]
+| align="center"|{{RUchar|о кири́ллице}}
+|}
+
+===Related terms===
+*[[латиница]]
