an actual definition <liber amicorum#188333>

--- a/wiki/liber_amicorum.wikitext
+++ b/wiki/liber_amicorum.wikitext
@@ -1,1 +1,6 @@
-I think this is a festschrift...?
+==English==
+===Etymology===
+{{L.}} [[liber]], ''[[book]]'' + [[amicorum]] from [[amicus]], ''[[friend]]''
+===Noun===
+'''[[liber]] [[amicorum]]'''
+# (literally) [[book]] of [[friend]]s - an early form of [[autograph book]] that originated in [[Germany]]
