add Etymology <Godspeed#188336>

--- a/wiki/Godspeed.wikitext
+++ b/wiki/Godspeed.wikitext
@@ -1,4 +1,6 @@
 ==English==
+===Etymology===
+Middle English [[God]] + [[spede]] from [[speden]], ''to [[prosper]]'' - may God prosper you
 ===Noun===
 '''godspeed'''
 # An expression of  respect and good will when addressing someone, typically someone about to go on a journey or a daring endeavor
