--- a/wiki/Godspeed.wikitext
+++ b/wiki/Godspeed.wikitext
@@ -2,5 +2,5 @@
 ===Etymology===
 Middle English [[God]] + [[spede]] from [[speden]], ''to [[prosper]]'' - may God prosper you
 ===Noun===
-'''godspeed'''
+'''Godspeed'''
 # An expression of  respect and good will when addressing someone, typically someone about to go on a journey or a daring endeavor
