--- a/wiki/file.wikitext
+++ b/wiki/file.wikitext
@@ -41,7 +41,7 @@ French ''[[fil]]'', "thread", Latin ''[[filum]]'', "thread".
 *Danish: [[arkivalie]] ''n''
 *Finnish: [[kansio]]
 *French: [[fichier]] ''m''
-*German: [[Kartei]] ''f'', [[Datei]] ''f''
+*German: [[Kartei]] ''f'', [[Datei]] ''f'', [[Akte]] ''f''
 |}
 | width=1% |
 |bgcolor="#FFFFE0" valign=top width=48%|
