/* =English */ <autograph book#188341>

--- a/wiki/autograph_book.wikitext
+++ b/wiki/autograph_book.wikitext
@@ -1,4 +1,5 @@
-===English==
+==English==
+
 ===Noun===
 '''[[autograph]] [[book]]'''
 # a book in which one [[collect]]s and [[display]]s autographs
