--- a/wiki/hiraeth.wikitext
+++ b/wiki/hiraeth.wikitext
@@ -5,8 +5,9 @@
 # An intense form of [[longing]] or [[nostalgia]]
 
 ====Related terms====
-*[[hir]]
+*[[hiraethu]]
 
 <!-- do not move pt: it is claimed to be the only equivalent word in another language -->
 ====Translations====
+*German: [[Sehnsucht]]
 *Portuguese: [[saudade]]
