/* Translations */Welsh <love#2682>

--- a/wiki/love.wikitext
+++ b/wiki/love.wikitext
@@ -183,6 +183,7 @@ The translations below need to be checked by native speakers and then inserted i
 *Spanish: [[amor#Spanish|amor]] ''m''
 *Swedish: [[kärlek]] ''c''
 *Ukrainian: [[кохання]], [[любов]]
+*Welsh: [[cariad]] ''m''
 {{bottom}}
 
 '''romantic feelings'''
@@ -205,6 +206,7 @@ The translations below need to be checked by native speakers and then inserted i
 *Russian: [[любовь]] ''f''
 *Slovak: [[láska]] ''f''
 *Swedish: [[kärlek]] ''c''
+*Welsh: [[serch]] ''m''
 {{bottom}}
 
 '''darling or sweetheart'''
@@ -224,7 +226,8 @@ The translations below need to be checked by native speakers and then inserted i
 *Portuguese: [[amor#Portuguese|amor]]
 *Russian: [[любимый]] (l'ubimij) ''m'', [[любимая]] (l'ubima'a) ''f''
 *Slovak: [[láska]] ''f''
-*Swedish: [[älskling]] ''c'' 
+*Swedish: [[älskling]] ''c''
+*Welsh: [[cariad]] 
 {{bottom}}
 
 '''zero'''
