/* Translations */ Welsh <hate#49630>

--- a/wiki/hate.wikitext
+++ b/wiki/hate.wikitext
@@ -36,6 +36,7 @@
 *Russian: [[ненавидеть]] (nenavidet')
 *Spanish: [[odiar]]
 *{{sv}}: [[hata]]
+*Welsh: [[casáu]]
 
 ===Noun===
 '''hate''' (''[[uncountable]]'')
