--- a/wiki/hatred.wikitext
+++ b/wiki/hatred.wikitext
@@ -24,6 +24,7 @@
 *Russian: [[ненависть]] ''n'' (nenavist')
 *Spanish: [[odio]] ''m''
 *Swedish: [[hat#Swedish|hat]] ''n''
+*Welsh: [[casineb]]
 
 ===See also===
 *[[disgust]]
