--- a/wiki/da.wikitext
+++ b/wiki/da.wikitext
@@ -88,8 +88,8 @@
 #[[through]]
 
 ----
-==Welsh===
-===Noun====
+==Welsh==
+===Noun===
 '''da''' ''m''
 # [[goodness]]
 # ''collective noun'' [[goods]], [[cattle]]
