--- a/wiki/welcome.wikitext
+++ b/wiki/welcome.wikitext
@@ -51,6 +51,7 @@ From '''[[well]]''' + '''[[come]]'''
 *{{tt}}: [[räxim itegez]]!
 *{{vi}}: [[xin chào]]!, [[chào]]!, [[hoan nghênh]]!
 *{{vo}}: [[vekömö]]!
+*{{cy}}: [[croeso]]!
 *{{xh}}: [[namkelekile]]!
 *{{yi}}: ![[װילקום]] (wilkum)
 *{{zu}}: [[isibingelelo]]!
@@ -77,7 +78,7 @@ From '''[[well]]''' + '''[[come]]'''
 *[[Romanian]]: [[întâmpina]]
 *[[Russian]]: [[приветствовать]]
 *[[Spanish]]: [[dar#Spanish|dar]] la [[bienvenida]] ([[a#Spanish|a]])
-*[[Welsh]]: [[croeso]]
+*[[Welsh]]: [[croesawu]]
 *[[Vietnamese]]: [[chào]] ([[đến]]), [[hoan nghênh]]
 *[[Volapük]]: [[vekömön]]
 
