/* Arabic */ <كتابة لاتينية#93581>

--- a/wiki/%D9%83%D8%AA%D8%A7%D8%A8%D8%A9_%D9%84%D8%A7%D8%AA%D9%8A%D9%86%D9%8A%D8%A9.wikitext
+++ b/wiki/%D9%83%D8%AA%D8%A7%D8%A8%D8%A9_%D9%84%D8%A7%D8%AA%D9%8A%D9%86%D9%8A%D8%A9.wikitext
@@ -1,5 +1,6 @@
 ==Arabic==
-
+[[Category:Arabic nouns]]
 ===Proper noun===
-'''لاتينية (كتابة)'''  <!--Are those parenthesis supposed to be there?!-->
-# [[Latin alphabet]]
+{{ARchar|كتابة اللاتينية}} {{IPAchar|(kitáːba al-latiníyya)}}
+
+# [[Latin]] [[script]], [[Latin]] [[writing]]
