/* Translations */ <Latin alphabet#79309>

--- a/wiki/Latin_alphabet.wikitext
+++ b/wiki/Latin_alphabet.wikitext
@@ -1,4 +1,5 @@
 ==English==
+{{Wikipedia}}
 ===Etymology===
 ''[[Latin]]'', + ''[[alphabet]]''.
 ====Noun phrase====
@@ -6,39 +7,41 @@
 
 #The [[26]]-[[letter]] [[alphabet]] consisting of the letters
 #:[[A]], [[B]], [[C]], [[D]], [[E]], [[F]], [[G]], [[H]], [[I]], [[J]], [[K]], [[L]], [[M]], [[N]], [[O]], [[P]], [[Q]], [[R]], [[S]], [[T]], [[U]], [[V]], [[W]], [[X]], [[Y]], [[Z]]
+
 =====Synonyms=====
 *[[Roman alphabet]]
 
 ===== Translations =====
-*[[Alsatian]]: [[Lateinisches Alphabet]]
-*Arabic: [[لاتينية (كتابة)]] ()
-*[[Asturian]]: [[Alfabetu llatinu]]
-*[[Catalan]]: [[Alfabet llatí]]
-*Chinese: [[拉丁字母表]] (?tizìmǔ?)
-*Czech: [[Latinka]]
+{{top}}
+*[[Alsatian]]: [[lateinisches Alphabet]] ''n''
+*Arabic: {{ARchar|[[كتابة اللاتينية]]}} {{IPAchar(kitáːba al-latiníyya)}} ''f''
+*[[Asturian]]: [[alfabetu llatinu]] ''m''
+*[[Catalan]]: [[alfabet llatí]]  ''m''
+*Chinese: [[拉丁字母表]] (lādīng-zìmǔbiǎo)
+*Czech: [[Latinka]] ''f''
 *Dutch: [[Latijns alfabet]]
 *[[Esperanto]]: [[Latina alfabeto]]
-*Finnish: [[Latinalaiset aakkoset]]
-*French: [[Alphabet latin]]
-*German: [[lateinisches Alphabet]] ''n'' (1)
-*Greek: [[Λατινικό αλφάβητο]] (Latiniko alfavito) ([[:el:Λατινικό αλφάβητο|el]])
-*Hebrew: [[אלפבית לטיני]] (Alfabet Latini)
-*Hungarian: [[Latin írás]]
+*Finnish: [[latinalaiset aakkoset]]
+*French: [[alphabet latin]] ''m''
+*German: [[lateinisches Alphabet]] ''n''
+*Greek: [[Λατινικό αλφάβητο]] (Latinikó alfávito) ''n'' ([[:el:Λατινικό αλφάβητο|el]])
+*Hebrew: [[אלפבית לטיני]] (alfabet latini)
+*Hungarian: [[latin írás]]
+{{mid}}
 *[[Ido]]: [[Latinal alfabeto]]
 *Italian: [[alfabeto latino]] ''m''
-*Japanese: [[ラテン文字]] (Raten-?gaku?)
+*Japanese: [[ラテン文字]] (Ratén-moji)
 *Korean: [[로마 문자]] (Roma mokcha)
-*Latin: [[Alphabetum latinum]]?
-*Polish: [[Alfabet łaciński]]
-*Portuguese: [[Alfabeto latino]]
-*Romanian: [[Alfabetul latin]]
-*Russian: [[Латинский алфавит]] (Latinsky alfavit)
-*Slovenian: [[Latinica]]
-*Spanish: [[Alfabeto latino]]
+*Latin: [[alphabetum latinum]] ''n''
+*Polish: [[alfabet łaciński]] ''m''
+*Portuguese: [[alfabeto latino]] ''m''
+*Romanian: [[alfabetul latin]] ''m''
+*Russian: [[латиница]] (latínitsa) ''f'', [[латинский алфавит]] (latínskij alfavít) ''m''
+*Slovenian: [[Latinica]] ''f''
+*Spanish: [[alfabeto latino]] ''m''
 *Swedish: [[latinska alfabetet]]
-*[[Tatar]]: [[Latín älifba]]
-*Ukrainian: [[Латинська абетка]] (Latins'ka abetka)
-
-{{Wikipedia}}
+*[[Tatar]]: [[latín älifba]]
+*Ukrainian: [[латинська абетка]] (latins’ka abetka) ''f''
+{{bottom}}
 
 [[el:Latin alphabet]]
