/* Translations */ <Latin alphabet#79309>

--- a/wiki/Latin_alphabet.wikitext
+++ b/wiki/Latin_alphabet.wikitext
@@ -14,7 +14,7 @@
 ===== Translations =====
 {{top}}
 *[[Alsatian]]: [[lateinisches Alphabet]] ''n''
-*Arabic: {{ARchar|[[كتابة اللاتينية]]}} {{IPAchar(kitáːba al-latiníyya)}} ''f''
+*Arabic: {{ARchar|[[كتابة اللاتينية]]}} {{IPAchar|(kitáːba al-latiníyya)}} ''f''
 *[[Asturian]]: [[alfabetu llatinu]] ''m''
 *[[Catalan]]: [[alfabet llatí]]  ''m''
 *Chinese: [[拉丁字母表]] (lādīng-zìmǔbiǎo)
