--- a/wiki/aplomb.wikitext
+++ b/wiki/aplomb.wikitext
@@ -1,7 +1,7 @@
 ==English==
 ===Noun===
 '''aplomb'''
-#self-confidence; [[poise]]
+#Self-confidence; [[poise]]; [[composure]].
 #:''His [[nonchalance]] and '''aplomb''' during hard times has always been his best character trait.''
 
 [[io:Aplomb]]
