+audio, noun def <quality#1819>

--- a/wiki/quality.wikitext
+++ b/wiki/quality.wikitext
@@ -3,6 +3,9 @@
 Latin ''qualitas'' from ''qualis'', of what kind<br>
 Old French - ''qualite'', then Middle English.
 
+===Pronunciation===
+*{{audio|en-us-quality.ogg|Audio (US)}}
+
 ===Noun===
 '''quality''' - countable, plural = qualities
 
@@ -13,6 +16,7 @@ Old French - ''qualite'', then Middle English.
 #a [[property]] or [[attribute]] that differentiates a thing or person
 #*usage example - ''One of the qualities of pure iron is that it does not rust easily''
 #*usage example ''(archaic example) - The qualities of an evildoer include meanness, hatefulness, a hunger for violence and a love for the spilling of blood.''
+#(''thermodynamics'') In a two-[[phase]] [[liquid]]-[[vapor]] mixture, the [[ratio]] of the [[mass]] of vapor present to the total mass of the mixture.
 
 ====Translations====
 *Catalan: [[qualitat]]
