the verb is [[give somebody a leg up]] <leg up#2967>

--- a/wiki/leg_up.wikitext
+++ b/wiki/leg_up.wikitext
@@ -2,9 +2,5 @@
 ===Noun===
 '''[[leg]] [[up]]'''
 #(Literally) the act of assisting another's progress over a wall or other obstacle by forming a step for one of their feet with one's hands
-#A [[boost]], a sudden improvement.
+#A [[boost]], a sudden [[improvement]]; an [[advantage]]
 #[[assistance]], [[help]] given to get started or overcome a problem or obstacle
-
-===Verb===
-(to give a) '''leg up'''
-# {{substub}}
