major cleanup, expansion, revision, etc. -rfc <Quetzalcoatl#187853>

--- a/wiki/Quetzalcoatl.wikitext
+++ b/wiki/Quetzalcoatl.wikitext
@@ -1,3 +1,12 @@
-Feathered Snake
+==English==
+===Etymology===
+Nahuatl: Ketsalkoatl, "feathered snake"
 
-{{rfc}}
+===Proper noun===
+{{wikipedia}}
+'''Quetzalcoatl'''
+
+#The [[Aztec]] name for the Feathered-[[Serpent]] [[deity]] of ancient Mesoamerica, one of the main gods of many Mexican and northern Central American civilizations.
+
+====Translations====
+*Spanish: [[Quetzalcóatl]]
