/* Translations */  --- +italian ; corrected dutch, french and norwegian (they had degree sign (°) instead of masculine ordinal indicator (º)) <no#465945>

--- a/wiki/no.wikitext
+++ b/wiki/no.wikitext
@@ -12,18 +12,19 @@
 ====Translations====
 {{top}}
 *Danish: [[nr.]]
-*Dutch: [[nr]], [[n°]]
+*Dutch: [[nr]], [[nº]]
 *Finnish: [[nro]] <!--this belongs on the Finnish page: (abbreviation of ''numero'')-->
-*French: [[n°]]
+*French: [[nº]]
 *German: [[Nr.]]
 *Interlingua: [[nº]]
+*Italian: [[nº]], [[n.]], [[nr.]]
 {{mid}}
 *Portuguese: [[nº]]
 *Slovak: [[č.]]
 *Slovene: [[št.]]
 *Spanish: [[nº]] ''m'', [[nª]] ''f''
 *Swedish: [[nr]]
-*Norwegian: [[nr]], [[n°]]
+*Norwegian: [[nr]], [[nº]]
 {{bottom}}
 
 ===Adverb===
