--- a/wiki/philosophistic.wikitext
+++ b/wiki/philosophistic.wikitext
@@ -1,13 +1,4 @@
-Word : Philosophistic
-
-Pronounced : phil·o·soph·is·tic
-
-Part of speech : Adjective
-
-Definition :
-
-Exibiting philosophical or vague behavior with the intent of being annoying and or irritating.Used normally to describe a mood or feeling.
-
-Example of use :
-
-Alex was feeling philosphistic.He proceeded to annoy his friends ranting endlessly about virtues, principles and truths of being, knowledge or conduct.
+==English==
+===Adjective===
+'''philisophistic'''
+#Exibiting a love of [[sophistry]] or logical reasoning; '''philosophical'''; may include [[fallacious]] reasoning.
