/* Translations */  --- corrected the italian translation of "no" used to show an activity is forbidden, IS TO CORRECT even the other "no" , errors in translations and in examples! <no#465945>

--- a/wiki/no.wikitext
+++ b/wiki/no.wikitext
@@ -126,7 +126,7 @@
 {{top}}
 *French: [[défense de]] (''followed by an infinitive'')
 *German: [[verboten]] (''preceded by an infinitive'')
-*Italian: [[vietato da]] (''followed by an infinitive''), [[divieto di]] (''followed by an infinitive'')
+*Italian: [[non]] (''followed by an infinitive''), [[vietato]] (''followed by an infinitive''), [[divieto di]] (''followed by an infinitive or the corresponding noun'')
 {{bottom}}
 
 =====Translations to be checked=====
