/* Noun */ link key terms <provocative#62423>

--- a/wiki/provocative.wikitext
+++ b/wiki/provocative.wikitext
@@ -4,7 +4,7 @@
 
 '''provocative'''
 
-#Anything that is provocative; a stimulant; as, a provocative of appetite.
+#Anything that is provocative; a [[stimulant]]; as, a provocative of [[appetite]].
 
 ===Adjective===
 
