--- a/wiki/orangutan.wikitext
+++ b/wiki/orangutan.wikitext
@@ -5,7 +5,7 @@ Malay "forest people"
 {{wikipedia}}
 '''orangutan''' 
 
-#An [[arboreal]] [[anthropoid]] [[ape]] genus ''[[Pongo]]'' consisting of two species, ''Pongo pygmaeus'' of [[Borneo]] and ''P. abelii'' of [[Sumatra]], having a [[shaggy]] [[reddish]]-[[brown]] [[coat]], very long [[arm]]s, and no [[tail]].
+#An [[arboreal]] [[anthropoid]] [[ape]] genus ''[[Pongo]]'' consisting of two species, ''Pongo pygmaeus'' of [[Borneo]] and ''P. abelii'' of [[Sumatra]], having a [[shaggy]] [[reddish]]-[[brown]] [[coat]] and very long [[arm]]s.
 [[Category:Malay derivations]]
 
 ===Variant spellings===
