/* Adjective */ link key terms <provocative#62423>

--- a/wiki/provocative.wikitext
+++ b/wiki/provocative.wikitext
@@ -10,7 +10,7 @@
 
 '''provocative'''
 
-#Serving or tending to provoke, excite, or stimulate; exciting.
+#Serving or tending to [[provoke]], [[excite]], or [[stimulate]]; [[exciting]].
 
 ===Translations===
 
