--- a/wiki/fuse.wikitext
+++ b/wiki/fuse.wikitext
@@ -12,6 +12,9 @@
 ====Translations====
 *{{fi}}: [[sulake]] (2), [[varoke]] (2)
 
+Deutsch: Zündschnur (1)
+         Sicherung (2)
+
 ===Transitive verb===
 '''to fuse''' ([[fuses]], [[fused]], [[fusing]])
 # to [[melt]] together; to [[blend]]; to [[mix]] indistinguishably
