/* Related words */ + <cannibal#50599>

--- a/wiki/cannibal.wikitext
+++ b/wiki/cannibal.wikitext
@@ -10,6 +10,7 @@ From {{Sp.}} [[Canibalis]], the name given by Christopher Columbus to the Caribs
 ====Related words====
 *[[cannibalise]]
 *[[cannibalism]]
+*[[cannibalistic]]
 
 ====Translations====
 {| border=0 width=100%
