disambig and nPOV <pound for pound#1983806>

--- a/wiki/pound_for_pound.wikitext
+++ b/wiki/pound_for_pound.wikitext
@@ -1,4 +1,4 @@
-'''Pound-for-pound''' is the term used to describe a fighter's value in relation to fighters of different weight classes. It was created to describe world [[Welterweight]] and [[Middleweight]] champion [[Sugar Ray Robinson]], the most accomplished fighter of the modern era, by supporters who realized that while he was the greatest, as a Middleweight he would not be able to beat a Heavyweight. Hence, Robinson was called the pound-for-pound best without being expected to best much larger fighters, under the belief that he as a Middleweight was still a better quality fighter than any fighter fighting at heavier or lighter weights than him. [[Pernell Whitaker]], an [[Olympic]] [[gold medalist]] who won pro titles from 130-154 pounds, adopted the term to describe himself in the 1980s and '90s. 
+'''Pound-for-pound''' is the term used to describe a fighter's value in relation to fighters of different weight classes. It was created to describe world [[Welterweight]] and [[Middleweight]] champion [[Sugar Ray Robinson]], the most accomplished fighter of the modern era, by supporters who realized that while he could beat anyone in his own class, as a Middleweight he would not be able to beat a Heavyweight. Hence, Robinson was called the pound-for-pound best without being expected to best much larger fighters, under the belief that he as a Middleweight was still a better quality fighter than any fighter fighting at heavier or lighter weights than him. [[Pernell Whitaker]], an [[Olympics|Olympic]] [[gold medalist]] who won pro titles from 130-154 pounds, adopted the term to describe himself in the 1980s and '90s. 
 
 That title was passed on to other fighters. [[Felix Trinidad]], [[WBA]] [[Middleweight]] Champion, would later hold the title, but after his loss to undisputed [[Middleweight]] Champion [[Bernard Hopkins]] the title passed on to [[Welterweight]] Champion [[Shane Mosley]]. Mosley, however, lost to Vernon Forrest, and the title passed on to the [[Light heavyweight]] king [[Roy Jones Jr.]] After Jones lost to [[Antonio Tarver]], the title passed on to Bernard Hopkins, until he lost to [[Jermain Taylor]]. [[WBC]] Jr. Welterweight Champion [[Floyd Mayweather Jr.]] is now likely the best pound-for-pound fighter in the world, although some might argue for former Jr. Middleweight Champion [[Winky Wright]].
 
