--- a/wiki/ear.wikitext
+++ b/wiki/ear.wikitext
@@ -1,13 +1,14 @@
 ==English==
-===Etymology===
+
+===Etymology 1===
 From Middle English ''[[ere]]'', from Old English ''[[eare|ēare]]''. [[Cognate]]s include Greek ''[[ως]]'', Latin ''[[auris]]'', Gothic ''[[𐌰𐌿𐍃𐍉]]'' (auso), German ''[[Ohr]]'' and Russian ''[[ухо]]'' (uho).
 
 === Noun ===
 {{wikipedia}}
-'''ear''' (''plural'' '''ears''')
+'''ear'''  (''plural:'' '''[[ears]]''')
 
-#The [[organ]] of [[hearing]], consisting of the [[pinna]], [[auditory canal]], [[eardrum]], [[malleus]], [[incus]], [[stapes]] and [[cochlea]].
-#(''slang'') A [[police]] [[informant]]. 
+# The [[organ]] of [[hearing]], consisting of the [[pinna]], [[auditory canal]], [[eardrum]], [[malleus]], [[incus]], [[stapes]] and [[cochlea]].
+# (''slang'') A [[police]] [[informant]]. 
 #*[[en:Clint Eastwood|Clint Eastwood]] in the [[movie]] ''The Enforcer''.
 #:''If you don't cooperate, I'll put it out on the street that you're an '''ear.''''' 
 
@@ -70,13 +71,14 @@ From Middle English ''[[ere]]'', from Old English ''[[eare|ēare]]''. [[Cognate]
 |}
 |}
 
-===Etymology===
+===Etymology 2===
 From Anglo-Saxon ''[[ēar]]''; compare Dutch ''[[aar]]'', German ''[[Ähre]]'', Old Norse ''[[ax#Old Norse|ax]]'', Gothic ''[[ahs]]''.  From an Aryan root ''ak'', pointed; compare Latin ''[[acus]]'', needle.
 
 ===Noun===
 '''ear''' (''plural'' '''ears''')
 
-#The fruiting body of a [[grain]] plant.
+# The fruiting body of a [[grain]] plant.
+#:''He is in the fields, harvesting '''ears''' of corn.''
 
 ====Synonyms====
 *[[spike]]
@@ -93,11 +95,12 @@ From Anglo-Saxon ''[[ēar]]''; compare Dutch ''[[aar]]'', German ''[[Ähre]]'', 
 *Spanish: [[espiga]] ''f''
 {{bottom}}
 
-===Etymology===
+===Etymology 3===
 Anglo-Saxon ''[[erian]]'', West Aryan; compare Old Dutch ''[[erien]]'', Old High German ''[[erran]]'', Old Norse ''[[erja]]'', Gothic ''[[arjan]]'', Latin ''[[arare]]'' (compare '''[[arable]]'''), Greek ''[[άρουν]]'' and Irish ''[[airim]]''. [[Cognate]] with '''[[earth]]'''.
 
 ===Verb===
 #(''archaic'') to [[plough]]/[[plow]].
 
+[[Category: Words with multiple etymologies]]
 [[Category:1000 English basic words]]
 [[Category:Anatomy]]
