--- a/wiki/proceed.wikitext
+++ b/wiki/proceed.wikitext
@@ -1,19 +1,21 @@
 ==English==
+
 ===Noun===
-'''proceed'''
+'''proceed'''  (''plural:'' '''[[proceeds]]''')
+# used in plural sense only; see [[proceeds]].
 
-''See'' '''[[proceeds]]'''
-
-===Intransitive verb===
+===Verb===
+{{en-infl-reg-consonant|proceed||}
 '''to proceed''' ('''proceeds''', '''proceeding''', '''proceeding''')
 
-#To move, pass, or go forward or onward; to advance; to continue or renew motion begun; as, to proceed on a journey.
-#To pass from one point, topic, or stage, to another; as, to proceed with a story or argument.
-#To issue or come forth as from a source or origin; to come from; as, light proceeds from the sun.
-#To go on in an orderly or regulated manner; to begin and carry on a series of acts or measures; to act by method; to prosecute a design.
-#To be transacted; to take place; to occur.
-#To have application or effect; to operate.
-#To begin and carry on a legal process.
+[[Intransitive]]:
+# To move, pass, or go forward or onward; to advance; to continue or renew motion begun; as, to proceed on a journey.
+# To pass from one point, topic, or stage, to another; as, to proceed with a story or argument.
+# To issue or come forth as from a source or origin; to come from; as, light proceeds from the sun.
+# To go on in an orderly or regulated manner; to begin and carry on a series of acts or measures; to act by method; to prosecute a design.
+# To be transacted; to take place; to occur.
+# To have application or effect; to operate.
+# To begin and carry on a legal process.
 
 ====Translations====
 
