--- a/wiki/servant.wikitext
+++ b/wiki/servant.wikitext
@@ -1,8 +1,12 @@
-{{rfc}}
-#One who serves another, providing help in some manner.
-#One who is hired to provide regular household or other duties, and receives compensation.  As opposed to a [[slave]].
+==English==
+
+===Noun===
+'''servant'''  (''plural:'' '''[[servants]]''')
+# One who serves another, providing help in some manner.
+# One who is hired to provide regular household or other duties, and receives compensation.  As opposed to a [[slave]].
 
 ===[[Translation]]s===
 *[[Dutch]]: [[hulp]](je) (in de huishouding, ...) (2), [[huishoudhulp]] (2), [[bediende]] (2), [[knecht]] ''m'' (2), [[meid]] ''f'' (2)
 *[[German]]: [[Helfer]] ''m'' (1), [[Diener]] ''m'' (2)
+
 [[Category:1000 English basic words]]
