--- a/wiki/attach.wikitext
+++ b/wiki/attach.wikitext
@@ -1,8 +1,8 @@
 ==English==
 
 ===Verb===
-'''to attach'''
-#to fasten, to join to
+{{en-infl-reg-sibilant|atta|ch|}}
+# to fasten, to join to
 
 ====Synonyms====
 *[[connect]]
