--- a/wiki/proceed.wikitext
+++ b/wiki/proceed.wikitext
@@ -5,8 +5,7 @@
 # used in plural sense only; see [[proceeds]].
 
 ===Verb===
-{{en-infl-reg-consonant|proceed||}
-'''to proceed''' ('''proceeds''', '''proceeding''', '''proceeding''')
+{{en-infl-reg-consonant|proceed|||}-->
 
 [[Intransitive]]:
 # To move, pass, or go forward or onward; to advance; to continue or renew motion begun; as, to proceed on a journey.
@@ -118,8 +117,8 @@
 |}
 
 =====Translations to be checked=====
-<!--Remove this section once all of the translations below have been moved into the tables above.-->
 {{checktrans}}
+<!--Remove this section once all of the translations below have been moved into the tables above.-->
 The translations below need to be checked by native speakers and inserted into the appropriate table(s) above, removing any numbers.  Any numbering associating translations with definitions is unreliable.
 
 *French: [[procéder]]
