--- a/wiki/proceed.wikitext
+++ b/wiki/proceed.wikitext
@@ -5,7 +5,7 @@
 # used in plural sense only; see [[proceeds]].
 
 ===Verb===
-{{en-infl-reg-consonant|proceed|||}-->
+{{en-infl-reg-consonant|proceed|||}}
 
 [[Intransitive]]:
 # To move, pass, or go forward or onward; to advance; to continue or renew motion begun; as, to proceed on a journey.
