--- a/wiki/touch.wikitext
+++ b/wiki/touch.wikitext
@@ -1,15 +1,15 @@
 ==English==
+
 ===Pronunciation===
 *[[w:IPA|IPA]]: /ˈtʌʧ/
 *[[w:SAMPA|SAMPA]]: /<tt>tVtS</tt>/
 *[[w:AHD|AHD]]: /tûch/
 
 === Verb ===
-'''to touch''' (touched, touched)
-
+{{en-infl-reg-sibilant|tou|ch|}}
 # make a relatively small physical contact
 # affect, especially emotionally 
-#: ''Stefan was touched by the song.''
+#: ''Stefan was '''touched''' by the song.''
 
 === Translations ===
 *Chinese: [[轻摸]], [[摸]]
@@ -31,12 +31,12 @@
 *Ukrainian: [[дотоакатися|доторкáтися]] (dotorkatisja) (1), [[доторкнутися|доторкнýтися]] (dotorknutisja) (1), [[зворкшкватися|зворýшуватися]] (zvorushuvatisja) (2)
 
 === Noun ===
-'''touch''' (plural: touches)
+'''touch'''  (''plural:'' '''[[touches]]''')
 
 # a relatively small physical contact
-#: He seems to have a magic touch
+#:''He seems to have a magic '''touch'''.''
 # a contact by whatever means
-#: He promised to keep in touch
+#:''He promised to keep in '''touch'''.''
 # one of five senses
 # act of touching
 
@@ -57,6 +57,7 @@
 *Spanish: [[toque]] ''m'' (1), [[tacto]] ''m'' (1), [[contacto]] ''m'' (2)
 *Swedish]]: [[beröring]] (1), [[kontakt]] (2)
 *Ukrainian: [[дотик|дóтик]] (dotik) ''m'' (1), [[доторк|дóторк]] (dotork) ''m'' (1), [[контакт|контáкт]] (kontakt) (2), [[чуття дотику|чуття дóтику]] (chuttja dotiku) (3)
+
 [[Category:1000 English basic words]]
 
 [[io:Touch]]
