+noun, +{infl} <wait#46724>

--- a/wiki/wait.wikitext
+++ b/wiki/wait.wikitext
@@ -1,7 +1,14 @@
 ==English==
 
-===Intransitive verb===
+===Noun===
+'''wait'''  (''plural:'' '''[[waits]]''')
+# A [[delay]].
+#:''I had a very long '''wait''' at the TSA airport security check.''
 
+===Verb===
+{{en-infl-reg-consonant|wait||}}
+
+[[Intransitive]]:
 # To delay movement or action until some event.
 #: ''Wait here until your car arrives.''
 # To serve customers in a [[restaurant]] or other [[eating establishment]].
@@ -57,6 +64,5 @@
 *[[wait staff]]
 *[[waiting room]]
 *[[wait state]]
-
 
 [[sv:wait]]
