--- a/wiki/expense.wikitext
+++ b/wiki/expense.wikitext
@@ -1,21 +1,25 @@
 ==English==
+
 ===Etymology===
-Latin ''[[expensa]]'', or ''[[expensum]], from ''[[expensus]]'', past participle of ''[[expendere]]. See [[expend]]
+Latin ''[[expensa]]'', or ''[[expensum]], from ''[[expensus]]'', past participle of ''[[expendere]]. See [[expend]].
+
 ===Noun===
-'''expense'''
-#A spending or consuming; disbursement; expenditure.
+'''expense'''  (''plural:'' '''[[expenses]]''')
+# A spending or consuming; disbursement; expenditure.
 #:Husband nature's riches from '''expense'''. - Shakespeare, ''Sonnet XCIV''
-#That which is expended, laid out, or consumed; cost; outlay; charge; -- sometimes with the notion of loss or damage to those on whom the expense falls; as, the expenses of war; an expense of time.
-#Courting popularity at his party's expense. - [[Brougham?]]
-#''(Obsolete):'' Loss. - Shakespeare
+# That which is expended, laid out, or consumed; cost; outlay; charge; -- sometimes with the notion of loss or damage to those on whom the expense falls; as, the expenses of war; an expense of time.
+# Courting popularity at his party's expense. - [[Brougham?]]
+# ''(Obsolete):'' Loss. - Shakespeare
 #:And moan the expense of many a vanished sight. - [[Edmund Spenser]]
 
-===Transitive verb===
-'''expense'''
-#To [[charge]] a cost against an expense account; to bill something to the company for which one works.
+===Verb===
+{{en-infl-reg-other-e|expens|e}}
+
+[[Transitive]]:
+# To [[charge]] a cost against an expense account; to bill something to the company for which one works.
 #:''It should be acceptable to '''expense''' a business lunch with a client.''
 
 ====Derived expression====
-*'''Expense magazine''', ''(Military):'' a small magazine containing ammunition for immediate use. - [[H. L. Scott]]
+*[[expense magazine]], ''(Military):'' a small magazine containing ammunition for immediate use. - [[H. L. Scott]]
 
 [[it:expense]]
