--- a/wiki/comply.wikitext
+++ b/wiki/comply.wikitext
@@ -1,10 +1,9 @@
 ==English==
 
 ===Verb===
+{{en-infl-reg-consonant-y|compl|y}}
 
-'''to comply'''
-
-#To yield assent; to accord; agree, or acquiesce; to adapt one's self; to consent or conform; -- usually followed by with.
-#To be ceremoniously courteous; to make one's compliments.
-#To fulfill; to accomplish.
-#To infold; to embrace.
+# To yield assent; to accord; [[agree]], or [[acquiesce]]; to adapt one's self; to consent or conform; -- usually followed by with.
+# {{archaic}}: To be ceremoniously courteous; to make one's compliments.
+# {{archaic}}: To fulfill; to accomplish.
+# {{archaic}}: To infold; to embrace.
