+English, +{infl} <demand#57972>

--- a/wiki/demand.wikitext
+++ b/wiki/demand.wikitext
@@ -1,7 +1,9 @@
-=={{en}}==
+==English==
+
 ===Noun=== 
-#the desire to purchase [[goods]] and [[services]]
-#An [[order]]
+'''demand'''  (''plural:'' '''[[demands]]''')
+# The desire to purchase [[goods]] and [[services]].
+# An [[order]].
 
 ===Translations===
 
@@ -11,7 +13,8 @@
 *{{sv}}: [[efterfrågan]] (på) (1)
 
 ===Verb=== 
-#[[claim]] right to something. 
+{{en-infl-reg-consonant|demand||}}
+# To [[claim]] a right to something.
 #:''demand an explanation.''
 
 ===Translations===
