--- a/wiki/VCR.wikitext
+++ b/wiki/VCR.wikitext
@@ -1,1 +1,4 @@
-Acronym for video cassette recorder. Plays and records video cassettes.
+==English==
+===[[Initialism]]===
+'''VCR'''
+# [[video cassette recorder]]. Plays and records video cassettes.
